# evolution

./: Cargo.toml  index.html  targeting.ggb
benches/: bench.rs
src/: config.rs  entity_list.rs  lib.rs  state.rs
src/config/: graphics.rs  mod.rs
src/graphics/: camera.rs  mod.rs
src/world/: entity.rs  location.rs  mod.rs  physics_body.rs
src/world/entities/: creature.rs  entity.rs  mod.rs
theory/: contents.aux  contents.out  contents.tex  main.tex  pre.sty  targeted_acceleration.tex
