[package]
name = "evolution"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
macroquad = "0.4.2"
nalgebra = { version = "0.32.3", features = [
    "serde",
    "rand",
    "serde-serialize",
] }
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
strum = { version = "0.25.0", features = ["derive"] }
rand_distr = "0.4.3"
itertools = "0.11.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
